--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,105 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.card_body {
+  border: none;
+  background-color: #e7e7e7;
+}
+
+.card_des {
+  height: 70px;
+  width: 120px;
+}
+
+.label-float {
+  position: relative;
+  padding-top: 13px;
+}
+
+.label-float input {
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  outline: none;
+  width: 100%;
+  padding: 10px 20px;
+  font-size: 16px;
+  transition: all .1s linear;
+  -webkit-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+}
+
+.label-float select {
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  outline: none;
+  width: 100%;
+  padding: 10px 20px;
+  font-size: 16px;
+  transition: all .1s linear;
+  -webkit-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+}
+
+.label-float input:focus {
+  border: 2px solid blueviolet;
+}
+
+.label-float input::placeholder {
+  color: transparent;
+}
+
+.label-float label {
+  pointer-events: none;
+  position: absolute;
+  top: calc(50% - 12px);
+  left: 15px;
+  transition: all .1s linear;
+  -webkit-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+  background-color: white;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.label-float input:focus+label,
+.label-float input:not(:placeholder-shown)+label {
+  font-size: 13px;
+  top: 0;
+  color: blueviolet;
+}
+
+.button_submit {
+  background-color: blueviolet !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  border: none !important;
+  display: flex !important;
+}
+
+#chip {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.chipBody {
+  border-radius: 100px;
+  background-color: #fff;
+  border: 1px solid #b5b5b5;
+  padding: 5px;
+}
+
+#chip:checked+.chipBody {
+  background-color: #e6e6e6;
+}
+
+#chip:checked+.chipBody:before {
+  content: '✔';
 }
